Tests/project2/errors/decl2.flm
/* This tests for bad declarations - unknown type */

fun foo()
    a:int;
    b:double;
    c:int;
    begin
    bar(a,b,c)
    end


        
